[tool]
[tool.poetry]
authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = "FCC DA Time Series Visualizer Project"
name = "fcc-da-time-series-visualizer"
version = "0.0.1"
[tool.poetry.dependencies]
pandas = "^1.1"
python = "^3.7"
seaborn = "^0.11"
pytest = "^6.1"
pytest-flakes = "^4.0"
pytest-flake8 = "^1.0"
